css/main.css
/* ... */
.svg-lt {
  left: -85vw;
  top: -8vh;
  right: auto;
  bottom: auto;
  filter: drop-shadow(15px 10px 0px #f3f3f3);
}

.svg-lm {
  left: -92vw;
  top: 18vh;
  right: auto;
  bottom: auto;
}

.svg-lb {
  left: -92vw;
  top: 44.8vh;
  right: auto;
  bottom: auto;
  filter: drop-shadow(20px 10px 0px #f3f3f3);
}

.svg-rt {
  left: auto;
  top: 2vh;
  right: -86vw;
  bottom: auto;
}

.svg-rm {
  left: auto;
  top: 28.3vh;
  right: -98vw;
  bottom: auto;
}

.svg-rb {
  left: auto;
  top: 55vh;
  right: -102.5vw;
  bottom: auto;
  filter: drop-shadow(-6px 41px 0px #f3f3f3);
}

.svg-e6,
.svg-e7,
.svg-e9,
.svg-e10,
.svg-waves {
  position: absolute;
  /*z-index: -9;*/
}

.svg-e6 {
  left: 2vw;
  top: 13vh;
  right: auto;
  bottom: auto;
  max-width: 3%;
}

.svg-e7 {
  right: 10vw;
  top: 70.8vh;
  left: auto;
  bottom: auto;
  max-width: 3%;
}

.svg-e9 {
  left: 15%;
  top: 81vh;
  right: auto;
  bottom: auto;
  max-width: 2%;
}

.svg-e10 {
  right: 7vw;
  top: 20vh;
  left: auto;
  bottom: auto;
  max-width: 2%;
}

/* === Hero === */
.hero {
  display: flex;
  justify-content: center;
  flex-flow: column wrap;
  align-items: center;
  text-align: center;
  min-height: 100vh;
  overflow: hidden;
  position: relative;
  padding: 0 10%;
  margin: 0 auto;
  background: url(../img/bg-topography.svg) repeat center;
}

.hero .content-wrapper {
  z-index: 1;
}

.hero h2 {
  padding: 1em 0;
}
/* === Initial Call To Action === */
.initial-call-to-action {
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  height: 80vh;
  overflow: hidden;
  padding: 80px 0 20px 0;
}

.initial-call-to-action .content-wrapper {
  background-color: #f9fafc;
  border-radius: 50px;
  padding: 40px 30px;
}

.cta-highlight {
  background-color: #deebfe;
  display: inline-block;
  margin: 1.5em 0;
  padding: 6px 20px;
  border-radius: 50px;
}

.cta-highlight h2 {
  font-weight: 700;
}

/* === Work === */
.work {
  /*display: flex;
  justify-content: center;
  align-items: center;*/
  text-align: center;
  min-height: 50vh;
}

article {
  border-radius: 30px;
  padding: 40px 20px 10px 20px;
}

span {
  background-color: #deebfe;
  border-radius: 50px;
  text-transform: uppercase;
  padding: 6px 20px;
  margin: 0 auto;
  line-height: 2.5em;
}

/* === Skills === */
.skills {
  display: flex;
  justify-content: center;
  align-items: center;
  min-height: 50vh;
  text-align: center;
  padding: 70px 0;
}

.skills .content-wrapper {
  padding-top: 40px;
}

.skills article {
  background-color: #ffffff;
  padding: 40px 30px;
  margin: 40px;
  max-width: 300px;
  box-shadow: 6px 9px 23px 0px rgba(117, 138, 180, 0.1);
  -webkit-box-shadow: 6px 9px 23px 0px rgba(117, 138, 180, 0.1);
  -moz-box-shadow: 6px 9px 23px 0px rgba(117, 138, 180, 0.1);
}

.skills article i {
  font-size: 6em;
  padding: 10px;
}

.skills-text {
  padding-top: 15px;
}

/* === Call to action === */
.call-to-action {
  padding: 0 20px;
}

.call-to-action .rounded-square-container {
  background-color: #4d39d1;
  color: #f9fafc;
}

.call-to-action .content-wrapper {
  padding: 0 45px;
}

.call-to-action p {
  font-size: 1.2em;
  padding-bottom: 20px;
}

.call-to-action a {
  color: ;
  text-decoration: none;
}

.call-to-action h1 {
  padding-bottom: 20px;
}

/* === About === */
.about {
  padding: 0 20px;
}

.about .rounded-square-container,
.contact .rounded-square-container {
  min-height: 1vh;
  padding: 50px 30px;
  background-color: #ffffff;
  color: #4d39d1;
}

.about-text {
  text-align: left;
  padding: 1em 0;
}

.about-text a {
  font-weight: 700;
}

.about img {
  border-radius: 30px;
}

.image-container,
.work-overview img {
  overflow: hidden;
  display: flex;
  justify-content: center;
  align-items: center;
}

/* === Contact === */
.contact {
  padding: 0 20px;
  min-height: 100vh;
  display: flex;
  align-items: center;
  justify-content: center;
  margin: 0 auto;
}

.contact .content-wrapper {
  display: flex;
  flex-flow: column;
}

.info-sub {
  margin: 1em 0 0 0;
}

.contact a {
  font-size: 1.2em;
}

/* === Work overview === */
.work-overview {
  padding: 0 20px;
  text-align: center;
}

.work-overview img {
  /*width: 80%;*/
  max-width: 83vh;
  margin: 0 auto;
}

.button-container {
  margin: 30px 0;
  transition: all 0.5s;
  transition-timing-function: cubic-bezier(0.2, 3, 0.4, 1);
}

.work-overview-text {
  /*max-width: 90%;*/
  background-color: #ffffff;
  border-radius: 50px;
  padding: 30px;
  margin: 30px auto;
  box-shadow: 6px 9px 23px 0px rgba(117, 138, 180, 0.2);
  -webkit-box-shadow: 6px 9px 23px 0px rgba(117, 138, 180, 0.2);
  -moz-box-shadow: 6px 9px 23px 0px rgba(117, 138, 180, 0.2);
}

.work-overview p {
  padding: 0 22px;
}

#button-full-width {
  display: block;
  width: 80%;
  line-height: 0;
  font-size: 1.3em;
  font-weight: 700;
  margin: 0 auto;
  padding: 20px;
}

.pagination {
  display: flex;
  flex-flow: row nowrap;
  justify-content: space-between;
  align-items: stretch;
  padding: 0 4%;
}

.pagination > .button {
  background-color: #deebfe;
  color: #4d39d1;
  text-transform: uppercase;
  font-size: 1em;
}

/* === Work overview image slides === */
.image-slides-buttons {
  margin-top: 18px;
}

.image-slides-buttons > .next,
.image-slides-buttons > .prev {
  background-color: #deebfe;
  border-radius: 50px;
  font-size: 1em;
  font-weight: 400;
  color: #4d39d1;
  padding: 9px 15px;
  margin: 0 10px;
}

.image-slides-inner img {
  display: none;
}

.image-slides-inner img.active {
  display: inline-block;
}
/* ==========================================================================
   Helper classes
   ========================================================================== */

/*
 * Hide visually and from screen readers
 */

.hidden {
  display: none !important;
}
/* ... */

